addad nav bar & carusal

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                         "nav-primary": "#F85559",
                         // "bike-secondary": "red",
                     },
+
+                    backgroundImage: {
+                        'slide1': "url('./images/banner1.png')",
+                        'slide2': "url('./images/banner2.png')",
+                        'slide3': "url('./images/banner3.png')",
+                        'slide4': "url('./images/banner4.png')",
+                    }
                 },
             },
         };
@@ -109,9 +116,67 @@
             </div>
         </nav>
 
+        <!-- Banner -->
+        <!-- md:min-h-[calc(100vh-126px)] -->
+        <div class="relative">
+            <div class="carousel w-full mt-10 ">
+
+                <div id="slide1" class="carousel-item relative w-full ">
+
+                    <img src="./images/banner1.png" class="w-full">
+
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+
+                </div>
+
+                <div id="slide2" class="carousel-item relative w-full ">
+                    <img src="./images/banner2.png" class="w-full">
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full ">
+                    <img src="./images/banner3.png" class="w-full">
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full ">
+                    <img src="./images/banner4.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="text-center absolute md:space-y-5 top-28 md:top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                <h1 class="text-xl md:text-6xl text-center font-bold md:font-extrabold max-w-full text-white">Exotic
+                    tastes at your
+                    doorstep
+                </h1>
+                <p class="text-white text-center text-sm md:text-base">We supply highly quality organic products</p>
+
+                <button class="font-samibold text-white bg-nav-primary p-1 md:p-3  rounded-lg">Shop Now</button>
+
+            </div>
+        </div>
+
+
 
     </header>
     <main class="max-w-screen-xl mx-auto px-5 md:px-10">
+
+
+
+
+        </div>
+
 
 
     </main>
