--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="relative">
 
-            <div class="carousel w-full mt-10 ">
+            <div class="carousel w-full mt-5 md:mt-10 ">
 
                 <div id="slide1" class="carousel-item relative w-full ">
 
@@ -160,7 +160,7 @@
             </div>
             
             <div
-                class="text-center absolute md:space-y-5 top-25 md:top-60 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                class="text-center absolute md:space-y-5 top-24 md:top-60 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                 <h1 class="text-xl md:text-6xl text-center font-bold md:font-extrabold max-w-full text-white">Exotic
                     tastes at your
                     doorstep
