--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
             </div>
             
             <div
-                class="text-center absolute md:space-y-5 top-24 md:top-60 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                class="text-center absolute md:space-y-5 top-24 md:top-60  left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                 <h1 class="text-xl md:text-6xl text-center font-bold md:font-extrabold max-w-full text-white">Exotic
                     tastes at your
                     doorstep
                 </h1>
-                <p class="text-white text-center text-sm md:text-base">We supply highly quality organic products</p>
+                <p class="text-white text-center text-[12px] md:text-base">We supply highly quality organic products</p>
 
-                <button class="font-samibold text-white bg-nav-primary p-1 md:p-3 rounded-lg">Shop Now</button>
+                <button class="md:font-samibold text-white bg-nav-primary px-2 md:p-3  rounded-lg">Shop Now</button>
 
             </div>
 
