delays error solve

--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
 
                 <div class="space-y-3 flex-1">
                     <h1 class="text-5xl font-extrabold ">Deal of the day</h1>
-                    <p class="text-sm text-shorttext-primary">Contrary to popular belief, is not simply random text. It
+                    <p class="text-sm text-shorttext-primary mt-4">Contrary to popular belief, is not simply random
+                        text. It
                         has
                         roots in a piece of classical Latin
                         literature from 45 BC, making it over 2000 years old.</p>
