add cart section

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 
     </header>
-    <main class="max-w-screen-xl mx-auto px-5 md:px-10 mt-5 md:mt-24">
+    <main class="max-w-screen-xl mx-auto px-5 md:px-10 mt-5 md:mt-32">
 
         <!-- Delays -->
         <section class="">
@@ -273,6 +273,175 @@
 
                 </div>
             </div>
+
+        </section>
+        <!-- shop cart -->
+        <section class="mt-5 md:mt-14 text-center">
+            <div class=" grid grid-rows-1 md:grid-cols-4 gap-6">
+                <!-- card-1 -->
+                <div class="card card-compact border py-5 shadow-xl">
+                    <figure><img src="./images/fruit6.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center space-y-3">
+                        <h2 class="text-xl font-semibold mt-2">12.90$ - 18.85$</h2>
+
+                        <hr class="bg-red-500 w-2/5  mx-auto">
+
+                        <div class="space-y-3 mt-3">
+                            <p class="shorttext-primary">Apples</p>
+
+                            <div class="rating rating-half">
+                                <input type="radio" name="rating-10" class="rating-hidden" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                    checked />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                            </div>
+                            <p class="text-[#F85559] text-sm">Details</p>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Cart-2 -->
+                <div class="card card-compact border py-5 shadow-xl">
+                    <figure><img src="./images/fruit7.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center space-y-3">
+                        <h2 class="text-xl font-semibold mt-2">12.90$ - 18.85$</h2>
+
+                        <hr class="bg-red-500 w-2/5  mx-auto">
+
+                        <div class="space-y-3 mt-3">
+                            <p class="shorttext-primary">Orange</p>
+
+                            <div class="rating rating-half">
+                                <input type="radio" name="rating-10" class="rating-hidden" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                    checked />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                            </div>
+                            <p class="text-[#F85559] text-sm">Details</p>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Cart-3 -->
+                <div class="card card-compact border py-5 shadow-xl">
+                    <figure><img src="./images/fruit8.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center space-y-3">
+                        <h2 class="text-xl font-semibold mt-2">12.90$ - 18.85$</h2>
+
+                        <hr class="bg-red-500 w-2/5  mx-auto">
+
+                        <div class="space-y-3 mt-3">
+                            <p class="shorttext-primary">Red Dragon</p>
+
+                            <div class="rating rating-half">
+                                <input type="radio" name="rating-10" class="rating-hidden" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                    checked />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                            </div>
+                            <p class="text-[#F85559] text-sm">Details</p>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Cart-4 -->
+                <div class="card card-compact border py-5 shadow-xl">
+                    <figure><img src="./images/fruit9.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center space-y-3">
+                        <h2 class="text-xl font-semibold mt-2">12.90$ - 18.85$</h2>
+
+                        <hr class="bg-red-500 w-2/5  mx-auto">
+
+                        <div class="space-y-3 mt-3">
+                            <p class="shorttext-primary">Banana</p>
+
+                            <div class="rating rating-half">
+                                <input type="radio" name="rating-10" class="rating-hidden" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                                    checked />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-1" />
+                                <input type="radio" name="rating-10"
+                                    class="bg-[#FBC0A8] mask mask-star-2 mask-half-2" />
+                            </div>
+                            <p class="text-[#F85559] text-sm">Details</p>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+            <button class="md:font-samibold text-white bg-nav-primary mt-8 p-3  rounded-lg">Shop Now</button>
 
         </section>
 
