--- a/index.html
+++ b/index.html
@@ -454,13 +454,13 @@
 
         <section class="mt-5 md:mt-14">
 
-            <div class="relative bg-cover bg-center h-[135vh] md:h-screen  bg-meet-image  ">
+            <div class="relative bg-cover bg-center h-[135vh] md:h-screen -z-50 bg-meet-image  ">
 
-                <div class="absolute inset-0 bg-black opacity-60 z-10">
+                <div class="absolute inset-0 bg-black -z-10 opacity-60 ">
 
                 </div>
 
-                <div class="absolute flex flex-col items-center h-full z-20 justify-center">
+                <div class="flex flex-col items-center h-full justify-center">
                     <div class="text-center py-2 px-5 space-y-2 md:space-y-4">
                         <h1 class="text-white font-bold md:font-extrabold text-xl md:text-5xl ">Meet the team
                             section
