--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
                 </div>
 
-                <div class="absolute flex inset-0 flex-col items-center md:h-full justify-center">
+                <div class="flex flex-col items-center h-full justify-center">
                     <div class="text-center py-2 px-5 space-y-1 md:space-y-4">
                         <h1 class="text-white font-bold md:font-extrabold text-xl md:text-5xl ">Meet the team
                             section
