--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
         <section class="mt-5 md:mt-14">
 
-            <div class="relative bg-cover bg-center iphone-se:h-[185vh] md:h-screen -z-50 bg-meet-image  ">
+            <div class="relative bg-cover bg-center h-[200vh] md:h-screen -z-50 bg-meet-image  ">
 
                 <div class="absolute inset-0 bg-black -z-10 opacity-60 ">
 
