--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
             </div>
 
         </section>
+
         <!-- shop cart -->
         <section class="mt-5 md:mt-14 text-center">
             <div class=" grid grid-rows-1 md:grid-cols-4 gap-6">
@@ -466,7 +467,7 @@
 
         <!-- Meet the team section -->
 
-        <section class="mt-5 md:mt-14">
+        <section class="mt-5 md:mt-14 ">
 
             <div class="relative bg-cover bg-center h-[200vh] md:h-screen -z-50 bg-meet-image  ">
 
@@ -1090,8 +1091,103 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="mt-5 md:mt-14 px-5 md:px-10 bg-[#121212] ">
+        <section class="max-w-screen-xl mx-auto px-5 md:px-10 p-10 md:p-32">
+            <div class="flex flex-col items-center space-y-5 md:space-y-10">
+                <div class="">
+                    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+                        <img src="./images/logo.png" class="h-8" alt="Flowbite Logo" />
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Fruit
+                            Burst</span>
+                    </a>
+                </div>
+                <div class="">
+                    <ul class="flex flex-wrap justify-center text-center gap-5 text-white text-base font-medium">
+                        <li><a>Home</a></li>
+                        <li><a>About Us</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>All Fruits</a></li>
+                        <li><a>Support</a></li>
+                        <li><a>My Account</a></li>
+                    </ul>
 
+                </div>
+                <div>
+                    <nav>
+                        <div class="grid grid-flow-col gap-10">
+                            <a><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"
+                                    fill="none">
+                                    <g clip-path="url(#clip0_13_3499)">
+                                        <path
+                                            d="M40 7.5975C38.5125 8.25 36.9275 8.6825 35.275 8.8925C36.975 7.8775 38.2725 6.2825 38.8825 4.36C37.2975 5.305 35.5475 5.9725 33.6825 6.345C32.1775 4.7425 30.0325 3.75 27.6925 3.75C23.1525 3.75 19.4975 7.435 19.4975 11.9525C19.4975 12.6025 19.5525 13.2275 19.6875 13.8225C12.87 13.49 6.8375 10.2225 2.785 5.245C2.0775 6.4725 1.6625 7.8775 1.6625 9.39C1.6625 12.23 3.125 14.7475 5.305 16.205C3.9875 16.18 2.695 15.7975 1.6 15.195C1.6 15.22 1.6 15.2525 1.6 15.285C1.6 19.27 4.4425 22.58 8.17 23.3425C7.5025 23.525 6.775 23.6125 6.02 23.6125C5.495 23.6125 4.965 23.5825 4.4675 23.4725C5.53 26.72 8.545 29.1075 12.13 29.185C9.34 31.3675 5.7975 32.6825 1.9625 32.6825C1.29 32.6825 0.645 32.6525 0 32.57C3.6325 34.9125 7.9375 36.25 12.58 36.25C27.67 36.25 35.92 23.75 35.92 12.915C35.92 12.5525 35.9075 12.2025 35.89 11.855C37.5175 10.7 38.885 9.2575 40 7.5975Z"
+                                            fill="white" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_13_3499">
+                                            <rect width="40" height="40" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg></a>
+                            <a><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"
+                                    fill="none">
+                                    <g clip-path="url(#clip0_13_3502)">
+                                        <path
+                                            d="M40 20C40 29.9828 32.6859 38.257 23.125 39.757V25.7813H27.7852L28.6719 20H23.125V16.2484C23.125 14.6664 23.9 13.125 26.3844 13.125H28.9062V8.20313C28.9062 8.20313 26.6172 7.8125 24.4289 7.8125C19.8609 7.8125 16.875 10.5813 16.875 15.5938V20H11.7969V25.7813H16.875V39.757C7.31406 38.257 0 29.9828 0 20C0 8.95469 8.95469 0 20 0C31.0453 0 40 8.95469 40 20Z"
+                                            fill="white" />
+                                        <path
+                                            d="M27.7852 25.7812L28.6719 20H23.125V16.2484C23.125 14.6667 23.8998 13.125 26.3843 13.125H28.9062V8.20312C28.9062 8.20312 26.6175 7.8125 24.4293 7.8125C19.8609 7.8125 16.875 10.5813 16.875 15.5938V20H11.7969V25.7812H16.875V39.757C17.8933 39.9167 18.9369 40 20 40C21.0631 40 22.1067 39.9167 23.125 39.757V25.7812H27.7852Z"
+                                            fill="#1877F2" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_13_3502">
+                                            <rect width="40" height="40" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg></a>
+                            <a><svg xmlns="http://www.w3.org/2000/svg" width="58" height="40" viewBox="0 0 58 40"
+                                    fill="none">
+                                    <path
+                                        d="M55.9526 6.25899C55.294 3.81162 53.3644 1.88249 50.9175 1.22347C46.4468 0 28.5643 0 28.5643 0C28.5643 0 10.6821 0 6.21148 1.17683C3.81162 1.83542 1.83498 3.81206 1.17639 6.25899C0 10.7292 0 20 0 20C0 20 0 29.3174 1.17639 33.741C1.83542 36.1879 3.76455 38.1175 6.21192 38.7765C10.7292 40 28.5647 40 28.5647 40C28.5647 40 46.4468 40 50.9175 38.8232C53.3649 38.1646 55.294 36.235 55.953 33.7881C57.1294 29.3174 57.1294 20.0471 57.1294 20.0471C57.1294 20.0471 57.1765 10.7292 55.9526 6.25899Z"
+                                        fill="white" />
+                                    <path d="M22.8706 28.5648L37.7409 20.0001L22.8706 11.4354V28.5648Z"
+                                        fill="#FF0000" />
+                                </svg></a>
+                            <a><svg xmlns="http://www.w3.org/2000/svg" width="41" height="40" viewBox="0 0 41 40"
+                                    fill="none">
+                                    <path
+                                        d="M36.1214 36V35.9988H36.1294V24.2628C36.1294 18.5216 34.8934 14.0988 28.1814 14.0988C24.9546 14.0988 22.7894 15.8696 21.9054 17.548H21.8122V14.6348H15.4482V35.9988H22.075V25.42C22.075 22.6348 22.603 19.9412 26.0522 19.9412C29.451 19.9412 29.5014 23.12 29.5014 25.5984V36H36.1214Z"
+                                        fill="white" />
+                                    <path d="M4.65723 14.636H11.292V36H4.65723V14.636Z" fill="white" />
+                                    <path
+                                        d="M7.97219 4C5.85059 4 4.12939 5.7212 4.12939 7.8428C4.12939 9.9644 5.85059 11.7216 7.97219 11.7216C10.0938 11.7216 11.815 9.9644 11.815 7.8428C11.8134 5.7212 10.0922 4 7.97219 4Z"
+                                        fill="white" />
+                                </svg></a>
+                            <a><svg xmlns="http://www.w3.org/2000/svg" width="41" height="40" viewBox="0 0 41 40"
+                                    fill="none">
+                                    <g clip-path="url(#clip0_13_3521)">
+                                        <path
+                                            d="M27.6276 0C25.4951 0.147499 23.0026 1.51249 21.5501 3.28998C20.2251 4.90247 19.1351 7.29746 19.5601 9.62494C21.8901 9.69744 24.2976 8.29995 25.6926 6.49246C26.9976 4.80997 27.9851 2.42999 27.6276 0Z"
+                                            fill="white" />
+                                        <path
+                                            d="M36.0553 13.4199C34.0078 10.8524 31.1303 9.36243 28.4128 9.36243C24.8253 9.36243 23.3078 11.0799 20.8153 11.0799C18.2454 11.0799 16.2929 9.36743 13.1904 9.36743C10.1429 9.36743 6.89793 11.2299 4.84044 14.4149C1.94796 18.8999 2.44295 27.3323 7.13043 34.5148C8.80792 37.0848 11.0479 39.9747 13.9779 39.9997C16.5854 40.0247 17.3204 38.3273 20.8528 38.3098C24.3853 38.2898 25.0553 40.0222 27.6578 39.9947C30.5903 39.9722 32.9528 36.7698 34.6303 34.1998C35.8328 32.3573 36.2803 31.4298 37.2127 29.3498C30.4303 26.7673 29.3428 17.1224 36.0553 13.4199Z"
+                                            fill="white" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_13_3521">
+                                            <rect width="40" height="40" fill="white" transform="translate(0.129395)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg></a>
+
+
+                        </div>
+
+                    </nav>
+                </div>
+            </div>
+
+
+        </section>
     </footer>
 
 </body>
