footer issue solve

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
                     backgroundImage: {
 
                         'meet-image': "url('./images/team.png')",
-
-
                     },
 
                     screens: {
@@ -1342,7 +1340,7 @@
                 </div>
                 <div>
                     <nav>
-                        <div class="grid grid-flow-col gap-10">
+                        <div class="grid grid-flow-col gap-5 md:gap-10">
                             <a><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"
                                     fill="none">
                                     <g clip-path="url(#clip0_13_3499)">
